Small fix to allow Ansible playbooks to run on ALaSKA.

--- a/util/ansible/oskar-centos7/roles/oskar_python/tasks/main.yml
+++ b/util/ansible/oskar-centos7/roles/oskar_python/tasks/main.yml
@@ -19,5 +19,5 @@
   become: yes
 
 - pip:
-    name: file:///home/vagrant/oskar.git/python
+    name: file:///home/{{ ansible_user }}/oskar.git/python
   become: yes
