--- a/tools/templates/config/02_sdp_services.yaml
+++ b/tools/templates/config/02_sdp_services.yaml
@@ -1,3 +1,4 @@
+# SDP services
 ---
 package_root: ['sip', 'sdp_services']
 
@@ -7,3 +8,8 @@ packages:
     path:  quality_assessment_tango
     desc:  Quality Assessment Service (Tango device)
     abbr:  qa_tango
+
+  - title: Buffer Management Service
+    path:  buffer_manager
+    desc: Buffer management service
+    abbr: buffer_manager
