--- a/tools/templates/config/02_sdp_services.yaml
+++ b/tools/templates/config/02_sdp_services.yaml
@@ -1,15 +1,14 @@
 # SDP services
 ---
-package_root: ['sip', 'sdp_services']
+sip:
 
-packages:
+  sdp_services:
 
-  - title: Quality Assessment Service
-    path:  quality_assessment_tango
-    desc:  Quality Assessment Service (Tango device)
-    abbr:  qa_tango
+    quality_assessment:
+      title: Quality Assessment Service
 
-  - title: Buffer Management Service
-    path:  buffer_manager
-    desc: Buffer management service
-    abbr: buffer_manager
+    global_sky_model:
+      title: Global Sky Model Service
+
+    science_data_model:
+      title: Science Data Model Service
