added start of example / mock rpyc and rest API Master Controllers

--- a/.dockerignore
+++ b/.dockerignore
@@ -9,6 +9,5 @@
 **/README.md
 
 # Test directories
-# (Need to keep these in the images for now as these are used in some tests)
-# **/tests
+**/tests
 
