--- a/sip/sdp_services/quality_assessment/rpyc/Dockerfile
+++ b/sip/sdp_services/quality_assessment/rpyc/Dockerfile
@@ -1,5 +1,5 @@
 #
-# execution_control/master_controller/rpyc/Dockerfile
+# sdp_services/quality_assessment/rpyc/Dockerfile
 #
 FROM python:3.6-alpine3.6
 LABEL maintainer="Benjamin Mort <ben.mort@gmail.com>"
@@ -19,11 +19,11 @@ EXPOSE 12345
 WORKDIR /app
 
 # Copy code to container working directory
-COPY . /app/sip/master
+COPY . /app/sip/qa
 
 # Container healthcheck command
 HEALTHCHECK --interval=10s --timeout=1s --start-period=5s --retries=3 \
-    CMD python3 sip/master/check_health.py localhost 12345 || exit 1
+    CMD python3 sip/qa/check_health.py localhost 12345 || exit 1
 
 # Entrypoint (command that is run by default)
-ENTRYPOINT ["python3", "-m", "sip.master"]
+ENTRYPOINT ["python3", "-m", "sip.qa"]
