--- a/sip/execution_control/master_controller/rest/requirements.txt
+++ b/sip/execution_control/master_controller/rest/requirements.txt
@@ -1,6 +1,8 @@
 # Requirements for master_controller/rest
 
-# For the health check endpoint
+# For the REST endpoint
 bottle>=0.12.13
 bjoern>=2.0.1
 
+# For the REST CLI client
+requests>=2.18.4
