--- a/sip/execution_control/master_controller/rpyc/Dockerfile
+++ b/sip/execution_control/master_controller/rpyc/Dockerfile
@@ -8,7 +8,7 @@ LABEL maintainer="Benjamin Mort <ben.mort@gmail.com>"
 COPY requirements.txt /app/requirements.txt
 
 RUN apk update && \
-    pip install -r /app/requirements.txt && \
+    pip install --no-cache-dir  -r /app/requirements.txt && \
     find /usr/local/lib/python3.6/ -name 'tests' -exec rm -r '{}' + && \
     rm -r /root/.cache
 
