--- a/sip/platform_services/elk_logging/logstash/Dockerfile
+++ b/sip/platform_services/elk_logging/logstash/Dockerfile
@@ -1,2 +1,2 @@
 FROM docker.elastic.co/logstash/logstash:5.6.1
-COPY config/logstash.conf /usr/share/logstash/pipeline/logstash.conf
+COPY logstash.conf /usr/share/logstash/pipeline/logstash.conf
